--- a/TyDtk/TyCommon.storyboard
+++ b/TyDtk/TyCommon.storyboard
@@ -1407,26 +1407,28 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fuv-XE-zmm">
-                                        <rect key="frame" x="90" y="10" width="70" height="25"/>
+                                        <rect key="frame" x="90" y="10" width="60" height="25"/>
+                                        <color key="backgroundColor" red="0.82416421250000005" green="0.82416421250000005" blue="0.82416421250000005" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="25" id="1vG-aK-Ejf"/>
-                                            <constraint firstAttribute="width" constant="70" id="e8G-HS-EF1"/>
+                                            <constraint firstAttribute="width" constant="60" id="e8G-HS-EF1"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <state key="normal" title="分析报告">
-                                            <color key="titleColor" red="0.24081095429999999" green="0.64520547120000005" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleColor" red="1" green="0.58331439269999996" blue="0.12216659539999999" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
                                         <connections>
                                             <action selector="buttonAnalysisClick:" destination="IwN-au-9qu" eventType="touchUpInside" id="pqs-GN-7Hk"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GTI-kZ-Zww">
-                                        <rect key="frame" x="215" y="10" width="70" height="25"/>
+                                        <rect key="frame" x="225" y="10" width="60" height="25"/>
+                                        <color key="backgroundColor" red="0.82416421250000005" green="0.82416421250000005" blue="0.82416421250000005" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="25" id="Jqi-Dp-ewx"/>
-                                            <constraint firstAttribute="width" constant="70" id="wcw-Ub-9Wy"/>
+                                            <constraint firstAttribute="width" constant="60" id="wcw-Ub-9Wy"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                         <state key="normal" title="只看错题">
                                             <color key="titleColor" red="1" green="0.58331439269999996" blue="0.12216659539999999" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
@@ -1453,10 +1455,16 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="bottom" secondItem="4cs-ZZ-i8R" secondAttribute="bottom" id="6fk-AN-Ewo"/>
                             <constraint firstItem="4cs-ZZ-i8R" firstAttribute="leading" secondItem="HoI-gQ-fUb" secondAttribute="leading" id="Gt4-fw-Mqb"/>
                             <constraint firstItem="RuT-EF-VUg" firstAttribute="top" secondItem="4cs-ZZ-i8R" secondAttribute="bottom" id="OVE-nc-PU2"/>
                             <constraint firstAttribute="trailing" secondItem="4cs-ZZ-i8R" secondAttribute="trailing" id="S4L-sc-xEj"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="OVE-nc-PU2"/>
+                            </mask>
+                        </variation>
                     </view>
                     <navigationItem key="navigationItem" id="033-ep-njo">
                         <barButtonItem key="leftBarButtonItem" image="top_backbtn" id="q08-Cs-c0n">
@@ -1515,28 +1523,12 @@
                                             <action selector="buttonNextClick:" destination="oWh-sg-Mq5" eventType="touchUpInside" id="UeO-z6-1HB"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Odf-O7-1HS">
-                                        <rect key="frame" x="147" y="8" width="80" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="80" id="LSz-Bv-cPr"/>
-                                            <constraint firstAttribute="height" constant="30" id="UHa-4E-6cR"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <state key="normal" title="试题编号">
-                                            <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="buttonTopicCardClick:" destination="oWh-sg-Mq5" eventType="touchUpInside" id="ZEj-AE-zYb"/>
-                                        </connections>
-                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.92218177359999998" green="0.90175128199999999" blue="0.87757860519999997" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstItem="Odf-O7-1HS" firstAttribute="centerY" secondItem="q6J-lb-mCx" secondAttribute="centerY" id="7An-wk-saz"/>
                                     <constraint firstAttribute="bottom" secondItem="gqz-n2-gQw" secondAttribute="bottom" id="F2k-LG-hfz"/>
                                     <constraint firstAttribute="trailing" secondItem="9zX-I8-jhD" secondAttribute="trailing" id="JK1-l0-O56"/>
                                     <constraint firstItem="gqz-n2-gQw" firstAttribute="top" secondItem="q6J-lb-mCx" secondAttribute="top" id="Nh8-jf-pbv"/>
-                                    <constraint firstItem="Odf-O7-1HS" firstAttribute="centerX" secondItem="q6J-lb-mCx" secondAttribute="centerX" id="cXX-mr-JQh"/>
                                     <constraint firstAttribute="height" constant="45" id="eRJ-yC-0bz"/>
                                     <constraint firstItem="gqz-n2-gQw" firstAttribute="leading" secondItem="q6J-lb-mCx" secondAttribute="leading" id="nbm-Rq-0ho"/>
                                     <constraint firstAttribute="bottom" secondItem="9zX-I8-jhD" secondAttribute="bottom" id="ncj-TY-PDW"/>
@@ -1553,7 +1545,6 @@
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
-                        <outlet property="buttonTopNum" destination="Odf-O7-1HS" id="Z51-Ld-Eez"/>
                         <outlet property="lastButton" destination="gqz-n2-gQw" id="hBJ-I6-hrf"/>
                         <outlet property="nextButton" destination="9zX-I8-jhD" id="ptB-e0-fuz"/>
                     </connections>
@@ -1834,7 +1825,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="83" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MVH-f3-emH">
-                                <rect key="frame" x="0.0" y="45" width="375" height="671"/>
+                                <rect key="frame" x="0.0" y="40" width="375" height="676"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="83" id="5C4-aM-KYF" customClass="MGSwipeTableCell">
@@ -1851,73 +1842,24 @@
                                     <outlet property="delegate" destination="Izn-sb-zbG" id="qZ9-lj-rYj"/>
                                 </connections>
                             </tableView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1eb-6I-QHW">
-                                <rect key="frame" x="0.0" y="20" width="375" height="45"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="科目：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pe6-8J-NJI">
-                                        <rect key="frame" x="10" y="13" width="45" height="20"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="45" id="ENU-B0-bOa"/>
-                                            <constraint firstAttribute="height" constant="20" id="qex-jE-Kf9"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="77B-4i-20W">
-                                        <rect key="frame" x="55" y="13" width="310" height="20"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="20" id="9hS-kb-fJh"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                        <color key="textColor" red="0.88441506410000004" green="0.51448702260000001" blue="0.1141335103" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sZb-AX-9sW">
-                                        <rect key="frame" x="0.0" y="44" width="375" height="1"/>
-                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="1" id="Fbg-yj-1L8"/>
-                                        </constraints>
-                                    </view>
-                                </subviews>
-                                <color key="backgroundColor" red="0.93414017400000005" green="0.93414017400000005" blue="0.93414017400000005" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstItem="pe6-8J-NJI" firstAttribute="centerY" secondItem="1eb-6I-QHW" secondAttribute="centerY" id="2F1-pe-jDc"/>
-                                    <constraint firstItem="77B-4i-20W" firstAttribute="leading" secondItem="pe6-8J-NJI" secondAttribute="trailing" id="8we-Vn-dsm"/>
-                                    <constraint firstItem="pe6-8J-NJI" firstAttribute="leading" secondItem="1eb-6I-QHW" secondAttribute="leading" constant="10" id="PvM-gD-ii0"/>
-                                    <constraint firstAttribute="trailing" secondItem="sZb-AX-9sW" secondAttribute="trailing" id="Rca-lR-KMz"/>
-                                    <constraint firstItem="sZb-AX-9sW" firstAttribute="leading" secondItem="1eb-6I-QHW" secondAttribute="leading" id="gZy-du-glr"/>
-                                    <constraint firstItem="77B-4i-20W" firstAttribute="centerY" secondItem="1eb-6I-QHW" secondAttribute="centerY" id="lpO-oz-o3F"/>
-                                    <constraint firstAttribute="trailing" secondItem="77B-4i-20W" secondAttribute="trailing" constant="10" id="nEl-ja-Uxg"/>
-                                    <constraint firstAttribute="bottom" secondItem="sZb-AX-9sW" secondAttribute="bottom" id="rcU-vn-Le3"/>
-                                    <constraint firstAttribute="height" constant="45" id="x33-32-QD3"/>
-                                </constraints>
-                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="MVH-f3-emH" firstAttribute="top" secondItem="OGy-ru-1d6" secondAttribute="bottom" constant="19" id="104-8W-Z5P"/>
-                            <constraint firstAttribute="trailing" secondItem="1eb-6I-QHW" secondAttribute="trailing" id="A4e-OM-YgG"/>
-                            <constraint firstItem="MVH-f3-emH" firstAttribute="top" secondItem="SPP-FM-Iwe" secondAttribute="top" constant="45" id="FMm-wT-2oy"/>
-                            <constraint firstItem="1eb-6I-QHW" firstAttribute="top" secondItem="OGy-ru-1d6" secondAttribute="bottom" id="LRi-th-ZFL"/>
-                            <constraint firstItem="1eb-6I-QHW" firstAttribute="leading" secondItem="SPP-FM-Iwe" secondAttribute="leading" id="PyG-cP-rax"/>
+                            <constraint firstItem="MVH-f3-emH" firstAttribute="top" secondItem="SPP-FM-Iwe" secondAttribute="top" constant="40" id="FMm-wT-2oy"/>
                             <constraint firstItem="MVH-f3-emH" firstAttribute="leading" secondItem="SPP-FM-Iwe" secondAttribute="leading" id="TNy-yz-12v"/>
                             <constraint firstAttribute="trailing" secondItem="MVH-f3-emH" secondAttribute="trailing" id="jkk-r8-g1l"/>
                             <constraint firstItem="5lQ-Zm-95E" firstAttribute="top" secondItem="MVH-f3-emH" secondAttribute="bottom" constant="-49" id="mc6-pE-Ihn"/>
-                            <constraint firstItem="MVH-f3-emH" firstAttribute="top" secondItem="1eb-6I-QHW" secondAttribute="bottom" id="zFC-qW-fQL"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="104-8W-Z5P"/>
-                                <exclude reference="zFC-qW-fQL"/>
                             </mask>
                         </variation>
                     </view>
                     <navigationItem key="navigationItem" title="我的收藏" id="tkI-mH-uqj"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
-                        <outlet property="labSubject" destination="77B-4i-20W" id="NSO-bb-4gh"/>
                         <outlet property="tableViewCollect" destination="MVH-f3-emH" id="idc-wv-ilE"/>
                         <segue destination="1Ge-tH-fkp" kind="show" identifier="mynote" id="tsR-lA-Ry3">
                             <nil key="action"/>
@@ -2109,7 +2051,7 @@
         <image name="top_backbtn" width="12" height="20"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="3TO-hV-wL9"/>
         <segue reference="5ot-CK-4YJ"/>
+        <segue reference="3TO-hV-wL9"/>
     </inferredMetricsTieBreakers>
 </document>
